// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spotlight Dialog metaspaces should show metaspace favourites-space 1`] = `
<DocumentFragment>
  <div
    id="mx_SpotlightDialog_keyboardPrompt"
  >
    <span>
      Use 
      <kbd>
        ↓
      </kbd>
      <kbd>
        ↑
      </kbd>
       to scroll
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-label="Search Dialog"
    class="mx_SpotlightDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="mx_Dialog_header"
    />
    <div
      class="mx_SpotlightDialog_searchBox mx_textinput"
    >
      <input
        aria-activedescendant="mx_SpotlightDialog_button_result_Favourites"
        aria-describedby="mx_SpotlightDialog_keyboardPrompt"
        aria-label="Search"
        aria-owns="mx_SpotlightDialog_content"
        autocapitalize="off"
        autocomplete="off"
        autocorrect="off"
        placeholder="Search"
        spellcheck="false"
        type="text"
        value="favourites"
      />
    </div>
    <div
      aria-activedescendant="mx_SpotlightDialog_button_result_Favourites"
      aria-describedby="mx_SpotlightDialog_keyboardPrompt"
      id="mx_SpotlightDialog_content"
      role="listbox"
    >
      <div
        aria-labelledby="mx_SpotlightDialog_section_spaces"
        class="mx_SpotlightDialog_section mx_SpotlightDialog_results"
        role="group"
      >
        <h4
          id="mx_SpotlightDialog_section_spaces"
        >
          Spaces you're in
        </h4>
        <div>
          <li
            aria-selected="true"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_result_Favourites"
            role="option"
            tabindex="-1"
          >
            <div
              class="mx_SpotlightDialog_metaspaceResult"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.905 9.378 12 5.52l-1.905 3.86-4.259.618 3.082 3.004-.727 4.242L12 15.24l3.81 2.003-.728-4.242 3.082-3.004zM8.767 7.55l2.336-4.733a1 1 0 0 1 1.794 0l2.336 4.733 5.223.76a1 1 0 0 1 .555 1.705L17.23 13.7l.892 5.202a1 1 0 0 1-1.45 1.054L12 17.5l-4.672 2.456a1 1 0 0 1-1.451-1.054l.892-5.202-3.78-3.685a1 1 0 0 1 .555-1.706z"
                />
              </svg>
            </div>
            Favourites
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
        </div>
      </div>
      <div
        aria-labelledby="mx_SpotlightDialog_section_otherSearches"
        class="mx_SpotlightDialog_section mx_SpotlightDialog_otherSearches"
        role="group"
      >
        <h4
          id="mx_SpotlightDialog_section_otherSearches"
        >
          Use "favourites" to search
        </h4>
        <div>
          <li
            aria-selected="false"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_explorePublicSpaces"
            role="option"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 21q-1.65 0-2.825-1.175T2 17t1.175-2.825T6 13t2.825 1.175T10 17t-1.175 2.825T6 21m12 0q-1.65 0-2.825-1.175T14 17t1.175-2.825T18 13t2.825 1.175T22 17t-1.175 2.825T18 21M6 19q.824 0 1.412-.587Q8 17.825 8 17t-.588-1.412A1.93 1.93 0 0 0 6 15q-.824 0-1.412.588A1.93 1.93 0 0 0 4 17q0 .824.588 1.413Q5.175 19 6 19m12 0q.824 0 1.413-.587Q20 17.825 20 17t-.587-1.412A1.93 1.93 0 0 0 18 15q-.824 0-1.413.588A1.93 1.93 0 0 0 16 17q0 .824.587 1.413Q17.176 19 18 19m-6-8q-1.65 0-2.825-1.175T8 7t1.175-2.825T12 3t2.825 1.175T16 7t-1.175 2.825T12 11m0-2q.825 0 1.412-.588Q14 7.826 14 7q0-.824-.588-1.412A1.93 1.93 0 0 0 12 5q-.825 0-1.412.588A1.93 1.93 0 0 0 10 7q0 .824.588 1.412Q11.175 9 12 9"
              />
            </svg>
            Public spaces
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
          <li
            aria-selected="false"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_explorePublicRooms"
            role="option"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m8.566 17-.944 4.094q-.086.406-.372.656t-.687.25q-.543 0-.887-.469a1.18 1.18 0 0 1-.2-1.031l.801-3.5H3.158q-.572 0-.916-.484a1.27 1.27 0 0 1-.2-1.078 1.12 1.12 0 0 1 1.116-.938H6.85l1.145-5h-3.12q-.57 0-.915-.484a1.27 1.27 0 0 1-.2-1.078A1.12 1.12 0 0 1 4.875 7h3.691l.945-4.094q.085-.406.372-.656.286-.25.686-.25.544 0 .887.469.345.468.2 1.031l-.8 3.5h4.578l.944-4.094q.085-.406.372-.656.286-.25.687-.25.543 0 .887.469t.2 1.031L17.723 7h3.119q.573 0 .916.484.343.485.2 1.079a1.12 1.12 0 0 1-1.116.937H17.15l-1.145 5h3.12q.57 0 .915.484.343.485.2 1.079a1.12 1.12 0 0 1-1.116.937h-3.691l-.944 4.094q-.087.406-.373.656t-.686.25q-.544 0-.887-.469a1.18 1.18 0 0 1-.2-1.031l.8-3.5zm.573-2.5h4.578l1.144-5h-4.578z"
              />
            </svg>
            Public rooms
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
          <li
            aria-selected="false"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_startChat"
            role="option"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.175 13.825Q10.35 15 12 15t2.825-1.175T16 11t-1.175-2.825T12 7 9.175 8.175 8 11t1.175 2.825m4.237-1.412A1.93 1.93 0 0 1 12 13q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 11q0-.825.588-1.412A1.93 1.93 0 0 1 12 9q.825 0 1.412.588Q14 10.175 14 11t-.588 1.412"
              />
              <path
                d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0"
              />
              <path
                d="M16.23 18.792a13 13 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0q-.73.18-1.455.455a8 8 0 0 1-1.729-1.454q1.336-.618 2.709-.95A13.8 13.8 0 0 1 12 16q1.65 0 3.25.387 1.373.333 2.709.95a8 8 0 0 1-1.73 1.455"
              />
            </svg>
            People
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
          <li
            aria-selected="false"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_searchMessages"
            role="option"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m1.5 21.25 1.45-4.95a10.2 10.2 0 0 1-.712-2.1A10.2 10.2 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22q-1.125 0-2.2-.238a10.2 10.2 0 0 1-2.1-.712L2.75 22.5a.94.94 0 0 1-1-.25.94.94 0 0 1-.25-1m2.45-1.2 3.2-.95a1 1 0 0 1 .275-.062q.15-.013.275-.013.225 0 .438.038.212.036.412.137a7.4 7.4 0 0 0 1.675.6Q11.1 20 12 20q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4 6.325 6.325 4 12q0 .9.2 1.775t.6 1.675q.176.325.188.688t-.088.712z"
              />
            </svg>
            Messages
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Spotlight Dialog metaspaces should show metaspace home-space 1`] = `
<DocumentFragment>
  <div
    id="mx_SpotlightDialog_keyboardPrompt"
  >
    <span>
      Use 
      <kbd>
        ↓
      </kbd>
      <kbd>
        ↑
      </kbd>
       to scroll
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-label="Search Dialog"
    class="mx_SpotlightDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="mx_Dialog_header"
    />
    <div
      class="mx_SpotlightDialog_searchBox mx_textinput"
    >
      <input
        aria-activedescendant="mx_SpotlightDialog_button_result_Home"
        aria-describedby="mx_SpotlightDialog_keyboardPrompt"
        aria-label="Search"
        aria-owns="mx_SpotlightDialog_content"
        autocapitalize="off"
        autocomplete="off"
        autocorrect="off"
        placeholder="Search"
        spellcheck="false"
        type="text"
        value="home"
      />
    </div>
    <div
      aria-activedescendant="mx_SpotlightDialog_button_result_Home"
      aria-describedby="mx_SpotlightDialog_keyboardPrompt"
      id="mx_SpotlightDialog_content"
      role="listbox"
    >
      <div
        aria-labelledby="mx_SpotlightDialog_section_spaces"
        class="mx_SpotlightDialog_section mx_SpotlightDialog_results"
        role="group"
      >
        <h4
          id="mx_SpotlightDialog_section_spaces"
        >
          Spaces you're in
        </h4>
        <div>
          <li
            aria-selected="true"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_result_Home"
            role="option"
            tabindex="-1"
          >
            <div
              class="mx_SpotlightDialog_metaspaceResult"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16 11v8h3V9.177l-7-3.889-7 3.889V19h3v-8zm-6 10H5a2 2 0 0 1-2-2V9.177a2 2 0 0 1 1.029-1.748l7-3.89a2 2 0 0 1 1.942 0l7 3.89A2 2 0 0 1 21 9.177V19a2 2 0 0 1-2 2h-5v-8h-4z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            Home
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
        </div>
      </div>
      <div
        aria-labelledby="mx_SpotlightDialog_section_otherSearches"
        class="mx_SpotlightDialog_section mx_SpotlightDialog_otherSearches"
        role="group"
      >
        <h4
          id="mx_SpotlightDialog_section_otherSearches"
        >
          Use "home" to search
        </h4>
        <div>
          <li
            aria-selected="false"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_explorePublicSpaces"
            role="option"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 21q-1.65 0-2.825-1.175T2 17t1.175-2.825T6 13t2.825 1.175T10 17t-1.175 2.825T6 21m12 0q-1.65 0-2.825-1.175T14 17t1.175-2.825T18 13t2.825 1.175T22 17t-1.175 2.825T18 21M6 19q.824 0 1.412-.587Q8 17.825 8 17t-.588-1.412A1.93 1.93 0 0 0 6 15q-.824 0-1.412.588A1.93 1.93 0 0 0 4 17q0 .824.588 1.413Q5.175 19 6 19m12 0q.824 0 1.413-.587Q20 17.825 20 17t-.587-1.412A1.93 1.93 0 0 0 18 15q-.824 0-1.413.588A1.93 1.93 0 0 0 16 17q0 .824.587 1.413Q17.176 19 18 19m-6-8q-1.65 0-2.825-1.175T8 7t1.175-2.825T12 3t2.825 1.175T16 7t-1.175 2.825T12 11m0-2q.825 0 1.412-.588Q14 7.826 14 7q0-.824-.588-1.412A1.93 1.93 0 0 0 12 5q-.825 0-1.412.588A1.93 1.93 0 0 0 10 7q0 .824.588 1.412Q11.175 9 12 9"
              />
            </svg>
            Public spaces
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
          <li
            aria-selected="false"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_explorePublicRooms"
            role="option"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m8.566 17-.944 4.094q-.086.406-.372.656t-.687.25q-.543 0-.887-.469a1.18 1.18 0 0 1-.2-1.031l.801-3.5H3.158q-.572 0-.916-.484a1.27 1.27 0 0 1-.2-1.078 1.12 1.12 0 0 1 1.116-.938H6.85l1.145-5h-3.12q-.57 0-.915-.484a1.27 1.27 0 0 1-.2-1.078A1.12 1.12 0 0 1 4.875 7h3.691l.945-4.094q.085-.406.372-.656.286-.25.686-.25.544 0 .887.469.345.468.2 1.031l-.8 3.5h4.578l.944-4.094q.085-.406.372-.656.286-.25.687-.25.543 0 .887.469t.2 1.031L17.723 7h3.119q.573 0 .916.484.343.485.2 1.079a1.12 1.12 0 0 1-1.116.937H17.15l-1.145 5h3.12q.57 0 .915.484.343.485.2 1.079a1.12 1.12 0 0 1-1.116.937h-3.691l-.944 4.094q-.087.406-.373.656t-.686.25q-.544 0-.887-.469a1.18 1.18 0 0 1-.2-1.031l.8-3.5zm.573-2.5h4.578l1.144-5h-4.578z"
              />
            </svg>
            Public rooms
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
          <li
            aria-selected="false"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_startChat"
            role="option"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.175 13.825Q10.35 15 12 15t2.825-1.175T16 11t-1.175-2.825T12 7 9.175 8.175 8 11t1.175 2.825m4.237-1.412A1.93 1.93 0 0 1 12 13q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 11q0-.825.588-1.412A1.93 1.93 0 0 1 12 9q.825 0 1.412.588Q14 10.175 14 11t-.588 1.412"
              />
              <path
                d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0"
              />
              <path
                d="M16.23 18.792a13 13 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0q-.73.18-1.455.455a8 8 0 0 1-1.729-1.454q1.336-.618 2.709-.95A13.8 13.8 0 0 1 12 16q1.65 0 3.25.387 1.373.333 2.709.95a8 8 0 0 1-1.73 1.455"
              />
            </svg>
            People
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
          <li
            aria-selected="false"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_searchMessages"
            role="option"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m1.5 21.25 1.45-4.95a10.2 10.2 0 0 1-.712-2.1A10.2 10.2 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22q-1.125 0-2.2-.238a10.2 10.2 0 0 1-2.1-.712L2.75 22.5a.94.94 0 0 1-1-.25.94.94 0 0 1-.25-1m2.45-1.2 3.2-.95a1 1 0 0 1 .275-.062q.15-.013.275-.013.225 0 .438.038.212.036.412.137a7.4 7.4 0 0 0 1.675.6Q11.1 20 12 20q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4 6.325 6.325 4 12q0 .9.2 1.775t.6 1.675q.176.325.188.688t-.088.712z"
              />
            </svg>
            Messages
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Spotlight Dialog metaspaces should show metaspace people-space 1`] = `
<DocumentFragment>
  <div
    id="mx_SpotlightDialog_keyboardPrompt"
  >
    <span>
      Use 
      <kbd>
        ↓
      </kbd>
      <kbd>
        ↑
      </kbd>
       to scroll
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-label="Search Dialog"
    class="mx_SpotlightDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="mx_Dialog_header"
    />
    <div
      class="mx_SpotlightDialog_searchBox mx_textinput"
    >
      <input
        aria-activedescendant="mx_SpotlightDialog_button_result_People"
        aria-describedby="mx_SpotlightDialog_keyboardPrompt"
        aria-label="Search"
        aria-owns="mx_SpotlightDialog_content"
        autocapitalize="off"
        autocomplete="off"
        autocorrect="off"
        placeholder="Search"
        spellcheck="false"
        type="text"
        value="people"
      />
    </div>
    <div
      aria-activedescendant="mx_SpotlightDialog_button_result_People"
      aria-describedby="mx_SpotlightDialog_keyboardPrompt"
      id="mx_SpotlightDialog_content"
      role="listbox"
    >
      <div
        aria-labelledby="mx_SpotlightDialog_section_spaces"
        class="mx_SpotlightDialog_section mx_SpotlightDialog_results"
        role="group"
      >
        <h4
          id="mx_SpotlightDialog_section_spaces"
        >
          Spaces you're in
        </h4>
        <div>
          <li
            aria-selected="true"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_result_People"
            role="option"
            tabindex="-1"
          >
            <div
              class="mx_SpotlightDialog_metaspaceResult"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.175 13.825Q10.35 15 12 15t2.825-1.175T16 11t-1.175-2.825T12 7 9.175 8.175 8 11t1.175 2.825m4.237-1.412A1.93 1.93 0 0 1 12 13q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 11q0-.825.588-1.412A1.93 1.93 0 0 1 12 9q.825 0 1.412.588Q14 10.175 14 11t-.588 1.412"
                />
                <path
                  d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0"
                />
                <path
                  d="M16.23 18.792a13 13 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0q-.73.18-1.455.455a8 8 0 0 1-1.729-1.454q1.336-.618 2.709-.95A13.8 13.8 0 0 1 12 16q1.65 0 3.25.387 1.373.333 2.709.95a8 8 0 0 1-1.73 1.455"
                />
              </svg>
            </div>
            People
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
        </div>
      </div>
      <div
        aria-labelledby="mx_SpotlightDialog_section_otherSearches"
        class="mx_SpotlightDialog_section mx_SpotlightDialog_otherSearches"
        role="group"
      >
        <h4
          id="mx_SpotlightDialog_section_otherSearches"
        >
          Use "people" to search
        </h4>
        <div>
          <li
            aria-selected="false"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_explorePublicSpaces"
            role="option"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 21q-1.65 0-2.825-1.175T2 17t1.175-2.825T6 13t2.825 1.175T10 17t-1.175 2.825T6 21m12 0q-1.65 0-2.825-1.175T14 17t1.175-2.825T18 13t2.825 1.175T22 17t-1.175 2.825T18 21M6 19q.824 0 1.412-.587Q8 17.825 8 17t-.588-1.412A1.93 1.93 0 0 0 6 15q-.824 0-1.412.588A1.93 1.93 0 0 0 4 17q0 .824.588 1.413Q5.175 19 6 19m12 0q.824 0 1.413-.587Q20 17.825 20 17t-.587-1.412A1.93 1.93 0 0 0 18 15q-.824 0-1.413.588A1.93 1.93 0 0 0 16 17q0 .824.587 1.413Q17.176 19 18 19m-6-8q-1.65 0-2.825-1.175T8 7t1.175-2.825T12 3t2.825 1.175T16 7t-1.175 2.825T12 11m0-2q.825 0 1.412-.588Q14 7.826 14 7q0-.824-.588-1.412A1.93 1.93 0 0 0 12 5q-.825 0-1.412.588A1.93 1.93 0 0 0 10 7q0 .824.588 1.412Q11.175 9 12 9"
              />
            </svg>
            Public spaces
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
          <li
            aria-selected="false"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_explorePublicRooms"
            role="option"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m8.566 17-.944 4.094q-.086.406-.372.656t-.687.25q-.543 0-.887-.469a1.18 1.18 0 0 1-.2-1.031l.801-3.5H3.158q-.572 0-.916-.484a1.27 1.27 0 0 1-.2-1.078 1.12 1.12 0 0 1 1.116-.938H6.85l1.145-5h-3.12q-.57 0-.915-.484a1.27 1.27 0 0 1-.2-1.078A1.12 1.12 0 0 1 4.875 7h3.691l.945-4.094q.085-.406.372-.656.286-.25.686-.25.544 0 .887.469.345.468.2 1.031l-.8 3.5h4.578l.944-4.094q.085-.406.372-.656.286-.25.687-.25.543 0 .887.469t.2 1.031L17.723 7h3.119q.573 0 .916.484.343.485.2 1.079a1.12 1.12 0 0 1-1.116.937H17.15l-1.145 5h3.12q.57 0 .915.484.343.485.2 1.079a1.12 1.12 0 0 1-1.116.937h-3.691l-.944 4.094q-.087.406-.373.656t-.686.25q-.544 0-.887-.469a1.18 1.18 0 0 1-.2-1.031l.8-3.5zm.573-2.5h4.578l1.144-5h-4.578z"
              />
            </svg>
            Public rooms
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
          <li
            aria-selected="false"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_startChat"
            role="option"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.175 13.825Q10.35 15 12 15t2.825-1.175T16 11t-1.175-2.825T12 7 9.175 8.175 8 11t1.175 2.825m4.237-1.412A1.93 1.93 0 0 1 12 13q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 11q0-.825.588-1.412A1.93 1.93 0 0 1 12 9q.825 0 1.412.588Q14 10.175 14 11t-.588 1.412"
              />
              <path
                d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0"
              />
              <path
                d="M16.23 18.792a13 13 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0q-.73.18-1.455.455a8 8 0 0 1-1.729-1.454q1.336-.618 2.709-.95A13.8 13.8 0 0 1 12 16q1.65 0 3.25.387 1.373.333 2.709.95a8 8 0 0 1-1.73 1.455"
              />
            </svg>
            People
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
          <li
            aria-selected="false"
            class="mx_AccessibleButton mx_SpotlightDialog_option"
            id="mx_SpotlightDialog_button_searchMessages"
            role="option"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m1.5 21.25 1.45-4.95a10.2 10.2 0 0 1-.712-2.1A10.2 10.2 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22q-1.125 0-2.2-.238a10.2 10.2 0 0 1-2.1-.712L2.75 22.5a.94.94 0 0 1-1-.25.94.94 0 0 1-.25-1m2.45-1.2 3.2-.95a1 1 0 0 1 .275-.062q.15-.013.275-.013.225 0 .438.038.212.036.412.137a7.4 7.4 0 0 0 1.675.6Q11.1 20 12 20q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4 6.325 6.325 4 12q0 .9.2 1.775t.6 1.675q.176.325.188.688t-.088.712z"
              />
            </svg>
            Messages
            <div
              class="mx_SpotlightDialog_option--endAdornment"
            >
              <kbd
                aria-hidden="true"
                class="mx_SpotlightDialog_enterPrompt"
              >
                ↵
              </kbd>
            </div>
          </li>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;
